# icfpc2023

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  challenges.html  challenges.txt  index.html  index.txt  lambda.ts  package-lock.json  package.json  problems.html  problems.txt
challenges/: 10.html  10.txt  11.html  11.txt  12.html  12.txt  13.html  13.txt  14.html  14.txt  15.html  15.txt  16.html  16.txt  17.html  17.txt  18.html  18.txt  19.html  19.txt  20.html  20.txt  21.html  21.txt  22.html  22.txt  23.html  23.txt  24.html  24.txt  25.html  25.txt  26.html  26.txt  27.html  27.txt  28.html  28.txt  29.html  29.txt  (+118 more)
dashboard/: .env  README.md  middleware.ts  next.config.js  package-lock.json  package.json  vercel-install.sh
infra/: package-lock.json  package.json
problems/: 1.html  1.txt  10.html  10.txt  11.html  11.txt  12.html  12.txt  13.html  13.txt  14.html  14.txt  15.html  15.txt  16.html  16.txt  17.html  17.txt  2.html  2.txt  20.html  20.txt  21.html  21.txt  22.html  22.txt  23.html  23.txt  24.html  24.txt  25.html  25.txt  26.html  26.txt  27.html  27.txt  28.html  28.txt  29.html  29.txt  (+136 more)
scripts/hp-opt/: main.py  pyproject.toml  show.py
solver/: Cargo.toml
solver/cli/: Cargo.toml
solver/cli/src/: main.rs
solver/cli/src/ai/: annealing.rs  greed_move.rs  greed_swap.rs  grid_greed.rs  load.rs  mod.rs  random_put.rs  ring_side.rs
solver/core/: Cargo.toml
solver/core/src/: geo.rs  input.rs  lib.rs  output.rs  prune.rs  score.rs
solver/core/src/ai/: annealing.rs  grid.rs  grid_greed.rs  mod.rs
wasm/: Cargo.toml
(+3052 files in other folders)
