[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
glam = { version = "0.24.1", features = ["serde"] }
log = "0.4.19"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
structopt = { version = "0.3.26", default-features = false }
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
